create teste_form e add coisas

--- a/teste_lista.html
+++ b/teste_lista.html
@@ -6,7 +6,7 @@
   </head>
   <body>
      <ul>
-            <li><a href="https://www.centauro.com.br/?gclid=EAIaIQobChMIvbHQ4ujq-gIVm0VIAB0BZACuEAAYASAAEgKsrPD_BwE">Nike</a></li>
+            <li><a href="https://www.centauro.com.br/nav/marca/nike">Nike</a></li>
             <li><a href="https://www.centauro.com.br/nav/marca/adidas">Adidas</a></li>
             <li><a href="https://www.centauro.com.br/nav/linha/jordan/0">Jordan</a></li>
             <li><a href="https://www.centauro.com.br/nav/marca/mizuno/0">Mizuno</a></li>
