--- a/TESTE1.HTML
+++ b/TESTE1.HTML
@@ -40,6 +40,12 @@
                     <br />
                     <textarea rows="7" cols="30" name="comment"> </textarea>
                 </div>
+                <details>
+                    <summary>O que não devo escrever</summary>
+                    <p>o Arthur e GAY</p>
+                    <p>Arthur Boiola</p>
+                </details>
+
                 <br />
                 <div class="control">
                     <input type="submit" value="Enviar" />
