--- a/teste_tabela.html
+++ b/teste_tabela.html
@@ -7,6 +7,7 @@
         <title>Cenaturo - Ygor</title>
 
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./style.css">
     </head>
 
 
