--- a/Atv7.css/index.html
+++ b/Atv7.css/index.html
@@ -7,7 +7,8 @@
         <title>Centauro - Ygor</title>
     
         <meta charset="utf-8">
-            <link rel="stylesheet" href="./style.css">   </head>
+        <link rel="stylesheet" href="./style.css">
+    </head>
 
 
     <body>
