--- a/desafio/desafio.html
+++ b/desafio/desafio.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 
 <head>
+    <title> Desafio </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./style.css"> 
 </head>
